add data as json and basic graph

--- a/python_part.ipynb
+++ b/python_part.ipynb
@@ -3445,6 +3445,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert to json\n",
+    "df_json = df_all.to_json(orient=\"records\")\n",
+    "with open(\"data.json\", \"w\") as f:\n",
+    "    f.write(df_json)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
