imported stride data for one patient in each category, made json creation function

--- a/python_part.ipynb
+++ b/python_part.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3454,6 +3454,252 @@
     "df_json = df_all.to_json(orient=\"records\")\n",
     "with open(\"data.json\", \"w\") as f:\n",
     "    f.write(df_json)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "194\n",
+      "310\n",
+      "259\n",
+      "245\n"
+     ]
+    }
+   ],
+   "source": [
+    "#### Get left and right strides for each group\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "def extract_strides(file_path):\n",
+    "    \"\"\"\n",
+    "    Reads a .ts file and extracts the Double Support Time column.\n",
+    "    \n",
+    "    Assumes the .ts file is whitespace-delimited and that:\n",
+    "      - The file does not have a header row.\n",
+    "      - Columns 1, 2, 3, 4 are for left stride, right stride, left swing, right swing respectively.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        file_path (str): Path to the .ts file.\n",
+    "        \n",
+    "    Returns:\n",
+    "        pd.DataFrame: A DataFrame with two columns:\n",
+    "            - 'Double Support Time': The double support time for each stride.\n",
+    "            - 'filename': The name of the file.\n",
+    "    \"\"\"\n",
+    "    # Read the .ts file\n",
+    "    df = pd.read_csv(file_path, sep=r'\\s+', header=None, engine='python')\n",
+    "    df.dropna(how='all', inplace=True)\n",
+    "    \n",
+    "    # Extract the double support time column\n",
+    "    left_stride = df.iloc[:, 1]\n",
+    "    right_stride = df.iloc[:, 2]\n",
+    "    left_swing = df.iloc[:, 3]\n",
+    "    right_swing = df.iloc[:, 4]\n",
+    "\n",
+    "    # Get the filename\n",
+    "    file_name = os.path.basename(file_path)\n",
+    "\n",
+    "    label_name = re.match(r'^(als|hunt|control|park)', file_name.lower())\n",
+    "    \n",
+    "    # Create a new DataFrame with the desired two columns.\n",
+    "    result_df = pd.DataFrame({\n",
+    "        'left_stride': left_stride,\n",
+    "        'right_stride': right_stride,\n",
+    "        'left_swing': left_swing,\n",
+    "        'right_swing': right_swing,\n",
+    "        'filename': file_name,\n",
+    "        'label': label_name.group(1)\n",
+    "    })\n",
+    "    \n",
+    "    return result_df\n",
+    "\n",
+    "# Dataframes of our variables\n",
+    "file_als = 'gait_data/als1.ts'\n",
+    "df_strides_als = extract_strides(file_als)\n",
+    "print(len(df_double_support_als))\n",
+    "\n",
+    "file_hunt = 'gait_data/hunt1.ts'\n",
+    "df_strides_hunt = extract_strides(file_hunt)\n",
+    "print(len(df_double_support_hunt))\n",
+    "\n",
+    "file_control = 'gait_data/control1.ts'\n",
+    "df_strides_control = extract_strides(file_control)\n",
+    "print(len(df_double_support_control))\n",
+    "\n",
+    "file_park = 'gait_data/park1.ts'\n",
+    "df_strides_park = extract_strides(file_park)\n",
+    "print(len(df_double_support_park))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>left_stride</th>\n",
+       "      <th>right_stride</th>\n",
+       "      <th>left_swing</th>\n",
+       "      <th>right_swing</th>\n",
+       "      <th>filename</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.2833</td>\n",
+       "      <td>1.3533</td>\n",
+       "      <td>0.4067</td>\n",
+       "      <td>0.4133</td>\n",
+       "      <td>als1.ts</td>\n",
+       "      <td>als</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.3233</td>\n",
+       "      <td>1.2667</td>\n",
+       "      <td>0.4833</td>\n",
+       "      <td>0.4000</td>\n",
+       "      <td>als1.ts</td>\n",
+       "      <td>als</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.3033</td>\n",
+       "      <td>1.3600</td>\n",
+       "      <td>0.4500</td>\n",
+       "      <td>0.4267</td>\n",
+       "      <td>als1.ts</td>\n",
+       "      <td>als</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.4167</td>\n",
+       "      <td>1.2833</td>\n",
+       "      <td>0.5033</td>\n",
+       "      <td>0.3667</td>\n",
+       "      <td>als1.ts</td>\n",
+       "      <td>als</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.2367</td>\n",
+       "      <td>1.4067</td>\n",
+       "      <td>0.3467</td>\n",
+       "      <td>0.3567</td>\n",
+       "      <td>als1.ts</td>\n",
+       "      <td>als</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   left_stride  right_stride  left_swing  right_swing filename label\n",
+       "0       1.2833        1.3533      0.4067       0.4133  als1.ts   als\n",
+       "1       1.3233        1.2667      0.4833       0.4000  als1.ts   als\n",
+       "2       1.3033        1.3600      0.4500       0.4267  als1.ts   als\n",
+       "3       1.4167        1.2833      0.5033       0.3667  als1.ts   als\n",
+       "4       1.2367        1.4067      0.3467       0.3567  als1.ts   als"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_strides_als.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Determine the smallest number of rows among the four DataFrames\n",
+    "min_length = min(\n",
+    "    len(df_strides_als),\n",
+    "    len(df_strides_hunt),\n",
+    "    len(df_strides_control),\n",
+    "    len(df_strides_park)\n",
+    ")\n",
+    "\n",
+    "# Trim each DataFrame to the minimum number of rows and reset their index\n",
+    "df_als_trim = df_strides_als.iloc[:min_length].reset_index(drop=True)\n",
+    "df_hunt_trim = df_strides_hunt.iloc[:min_length].reset_index(drop=True)\n",
+    "df_control_trim = df_strides_control.iloc[:min_length].reset_index(drop=True)\n",
+    "df_park_trim = df_strides_park.iloc[:min_length].reset_index(drop=True)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File als1.json created successfully.\n",
+      "File hunt1.json created successfully.\n",
+      "File control1.json created successfully.\n",
+      "File park1.json created successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def save_to_json(df, filename):\n",
+    "    try:\n",
+    "        df_json = df.to_json(orient=\"records\")\n",
+    "        with open(filename, \"w\") as f:\n",
+    "            f.write(df_json)\n",
+    "        print(f\"File {filename} created successfully.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Failed to create file {filename}: {e}\")\n",
+    "\n",
+    "# Save DataFrames to JSON files\n",
+    "save_to_json(df_strides_als, \"als1.json\")\n",
+    "save_to_json(df_strides_hunt, \"hunt1.json\")\n",
+    "save_to_json(df_strides_control, \"control1.json\")\n",
+    "save_to_json(df_strides_park, \"park1.json\")"
    ]
   },
   {
