fucjing done with coordinates

--- a/python_part.ipynb
+++ b/python_part.ipynb
@@ -3733,6 +3733,256 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "GOAL: Compute average walking speed using subject_description.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Gait Speed for Control: 1.35 m/s\n",
+      "Average Gait Speed for Huntington's: 1.15 m/s\n",
+      "Average Gait Speed for Parkinson's: 1.00 m/s\n",
+      "Average Gait Speed for ALS: 1.05 m/s\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "def compute_avg_gait_speed(file_path, disease_name):\n",
+    "    try:\n",
+    "        df = pd.read_csv(file_path, sep='\\t', engine='python')\n",
+    "    except:\n",
+    "        df = pd.read_csv(file_path, sep=r'\\s+', engine='python')\n",
+    "\n",
+    "    df.columns = ['Subject', 'Group', 'Age', 'Height', 'Weight', 'Gender', 'GaitSpeed', 'Severity']\n",
+    "\n",
+    "    df['GaitSpeed'] = pd.to_numeric(df['GaitSpeed'], errors='coerce')\n",
+    "\n",
+    "    if disease_name.lower() == \"als\":\n",
+    "        df_filtered = df[df['Subject'].str.contains(\"als\", case=False, na=False)]\n",
+    "    else:\n",
+    "        df_filtered = df[df['Group'].str.contains(disease_name, case=False, na=False)]\n",
+    "\n",
+    "    return df_filtered['GaitSpeed'].mean()\n",
+    "\n",
+    "file_path = \"gait_data/subject-description.txt\"\n",
+    "\n",
+    "avg_gait_speed_control = compute_avg_gait_speed(file_path, \"control\")\n",
+    "avg_gait_speed_hunt = compute_avg_gait_speed(file_path, \"hunt\")\n",
+    "avg_gait_speed_park = compute_avg_gait_speed(file_path, \"park\")\n",
+    "avg_gait_speed_als = compute_avg_gait_speed(file_path, \"als\")\n",
+    "\n",
+    "print(f\"Average Gait Speed for Control: {avg_gait_speed_control:.2f} m/s\")\n",
+    "print(f\"Average Gait Speed for Huntington's: {avg_gait_speed_hunt:.2f} m/s\")\n",
+    "print(f\"Average Gait Speed for Parkinson's: {avg_gait_speed_park:.2f} m/s\")\n",
+    "print(f\"Average Gait Speed for ALS: {avg_gait_speed_als:.2f} m/s\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "GOAL: get positionality and time for each person"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Time</th>\n",
+       "      <th>X_Right</th>\n",
+       "      <th>Y_Right</th>\n",
+       "      <th>X_Left</th>\n",
+       "      <th>Y_Left</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.623960</td>\n",
+       "      <td>0.300000</td>\n",
+       "      <td>1.539960</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.006498</td>\n",
+       "      <td>4.693576</td>\n",
+       "      <td>0.284848</td>\n",
+       "      <td>4.612892</td>\n",
+       "      <td>0.015152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.012997</td>\n",
+       "      <td>7.833491</td>\n",
+       "      <td>0.269697</td>\n",
+       "      <td>7.726057</td>\n",
+       "      <td>0.030303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.019495</td>\n",
+       "      <td>10.779145</td>\n",
+       "      <td>0.254545</td>\n",
+       "      <td>10.708640</td>\n",
+       "      <td>0.045455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.025993</td>\n",
+       "      <td>13.636395</td>\n",
+       "      <td>0.239394</td>\n",
+       "      <td>13.519587</td>\n",
+       "      <td>0.060606</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Time    X_Right   Y_Right     X_Left    Y_Left\n",
+       "0  0.000000   1.623960  0.300000   1.539960  0.000000\n",
+       "1  0.006498   4.693576  0.284848   4.612892  0.015152\n",
+       "2  0.012997   7.833491  0.269697   7.726057  0.030303\n",
+       "3  0.019495  10.779145  0.254545  10.708640  0.045455\n",
+       "4  0.025993  13.636395  0.239394  13.519587  0.060606"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import os\n",
+    "from scipy.interpolate import interp1d\n",
+    "\n",
+    "# Helper function to open a .ts file and extract all columns, returning a DataFrame\n",
+    "def ts_file_extraction(ts_file):\n",
+    "    df = pd.read_csv('gait_data/' + ts_file, sep=r'\\s+', header=None, engine='python')\n",
+    "    df.dropna(how='all', inplace=True)  # Remove empty rows\n",
+    "    df.columns = ['Time', 'Left_Stride_Time', 'Right_Stride_Time', \n",
+    "                  'Left_Swing_Time', 'Right_Swing_Time', \n",
+    "                  'Left_Stance_%', 'Right_Stance_%', \n",
+    "                  'Left_Stance_Time', 'Right_Stance_Time', \n",
+    "                  'Left_Support_%', 'Right_Support_%', \n",
+    "                  'Double_Support_Time', 'Double_Support_%']\n",
+    "    return df\n",
+    "\n",
+    "# Helper function to extract sampling frequency from header files\n",
+    "def extract_sampling_frequency(header_path):\n",
+    "    with open(header_path, 'r') as f:\n",
+    "        first_line = f.readline().strip().split()\n",
+    "        return float(first_line[2])\n",
+    "\n",
+    "# Function to extract gait parameters from .ts and header files and return a DataFrame\n",
+    "def compute_gait_positions(hea_file, ts_file, avg_speed=1.2, step_lift=0.30, num_interpolated_points=100):\n",
+    "    # Extract sampling frequency from the header file\n",
+    "    sampling_freq = extract_sampling_frequency('gait_data/' + hea_file)\n",
+    "\n",
+    "    # Load the .ts file using the helper function\n",
+    "    df = ts_file_extraction(ts_file)\n",
+    "\n",
+    "    # Recalculate time based on the sample index and sampling frequency\n",
+    "    df['Time'] = df.index / sampling_freq\n",
+    "\n",
+    "    # Compute estimated stride lengths (and clip them to realistic values, e.g., between 0.5 and 1.5 m)\n",
+    "    df['Left_Stride_Length'] = np.clip(df['Left_Stride_Time'] * avg_speed, 0.5, 1.5)\n",
+    "    df['Right_Stride_Length'] = np.clip(df['Right_Stride_Time'] * avg_speed, 0.5, 1.5)\n",
+    "\n",
+    "    # Compute X-positions (forward movement) using cumulative sums\n",
+    "    df['X_Left'] = np.cumsum(df['Left_Stride_Length'])\n",
+    "    df['X_Right'] = np.cumsum(df['Right_Stride_Length'])\n",
+    "\n",
+    "    # Compute Y-positions (alternating binary pattern: 0 for ground, step_lift for air)\n",
+    "    df['Y_Left'] = np.where(df.index % 2 == 0, 0, step_lift)\n",
+    "    df['Y_Right'] = np.where(df.index % 2 == 0, step_lift, 0)\n",
+    "\n",
+    "    # Interpolate X positions to a common time vector\n",
+    "    original_time = df['Time']\n",
+    "    common_time = np.linspace(original_time.min(), original_time.max(), num=num_interpolated_points)\n",
+    "    \n",
+    "    interp_x_right = interp1d(original_time, df['X_Right'], kind='linear', fill_value=\"extrapolate\")\n",
+    "    interp_x_left = interp1d(original_time, df['X_Left'], kind='linear', fill_value=\"extrapolate\")\n",
+    "    \n",
+    "    new_X_right = interp_x_right(common_time)\n",
+    "    new_X_left = interp_x_left(common_time)\n",
+    "    \n",
+    "    # For Y positions, we generate a binary alternating pattern over the new time points,\n",
+    "    # rather than interpolating them (to preserve the stance/swing phase representation)\n",
+    "    new_Y_right = np.where(np.arange(num_interpolated_points) % 2 == 0, step_lift, 0)\n",
+    "    new_Y_left = np.where(np.arange(num_interpolated_points) % 2 == 0, 0, step_lift)\n",
+    "    \n",
+    "    # Create the final interpolated DataFrame\n",
+    "    interpolated_df = pd.DataFrame({\n",
+    "        'Time': common_time,\n",
+    "        'X_Right': new_X_right,\n",
+    "        'Y_Right': new_Y_right,\n",
+    "        'X_Left': new_X_left,\n",
+    "        'Y_Left': new_Y_left\n",
+    "    })\n",
+    "\n",
+    "    return interpolated_df\n",
+    "\n",
+    "# Example usage\n",
+    "exp_als_1_gait = compute_gait_positions('als1.hea', 'als1.ts')\n",
+    "print(exp_als_1_gait.head())\n",
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
