--- a/python_part.ipynb
+++ b/python_part.ipynb
@@ -3900,81 +3900,155 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import os\n",
-    "from scipy.interpolate import interp1d\n",
     "\n",
-    "# Helper function to open a .ts file and extract all columns, returning a DataFrame\n",
-    "def ts_file_extraction(ts_file):\n",
-    "    df = pd.read_csv('gait_data/' + ts_file, sep=r'\\s+', header=None, engine='python')\n",
-    "    df.dropna(how='all', inplace=True)  # Remove empty rows\n",
-    "    df.columns = ['Time', 'Left_Stride_Time', 'Right_Stride_Time', \n",
-    "                  'Left_Swing_Time', 'Right_Swing_Time', \n",
-    "                  'Left_Stance_%', 'Right_Stance_%', \n",
-    "                  'Left_Stance_Time', 'Right_Stance_Time', \n",
-    "                  'Left_Support_%', 'Right_Support_%', \n",
-    "                  'Double_Support_Time', 'Double_Support_%']\n",
-    "    return df\n",
+    "# -------------------------------\n",
+    "# Read Gait Data\n",
+    "# -------------------------------\n",
+    "file_path = 'gait_data/park1.ts'\n",
+    "data = pd.read_csv(file_path, delimiter=\"\\t\", header=0)\n",
+    "data.columns = [\n",
+    "    'elapsed_time', 'left_stride', 'right_stride', 'left_swing', 'right_swing',\n",
+    "    'left_swing_pct', 'right_swing_pct', 'left_stance', 'right_stance',\n",
+    "    'left_stance_pct', 'right_stance_pct', 'double_support_sec', 'double_support_pct'\n",
+    "]\n",
     "\n",
-    "# Helper function to extract sampling frequency from header files\n",
-    "def extract_sampling_frequency(header_path):\n",
-    "    with open(header_path, 'r') as f:\n",
-    "        first_line = f.readline().strip().split()\n",
-    "        return float(first_line[2])\n",
+    "# -------------------------------\n",
+    "# Simulation Parameters\n",
+    "# -------------------------------\n",
+    "body_height = 2  # Replace with actual subject height\n",
+    "H_peak = 0.06 * body_height  # Peak foot clearance (6% of body height)\n",
+    "dt = 0.01  # Time resolution\n",
+    "gait_speed = 0.98  # m/s\n",
     "\n",
-    "# Function to extract gait parameters from .ts and header files and return a DataFrame\n",
-    "def compute_gait_positions(hea_file, ts_file, avg_speed=1.2, step_lift=0.30, num_interpolated_points=100):\n",
-    "    # Extract sampling frequency from the header file\n",
-    "    sampling_freq = extract_sampling_frequency('gait_data/' + hea_file)\n",
+    "# -------------------------------\n",
+    "# Parabolic Vertical Motion Function\n",
+    "# -------------------------------\n",
+    "def parabolic_height(t, T_swing, H_peak):\n",
+    "    return - (4 * H_peak / T_swing**2) * (t - T_swing/2)**2 + H_peak\n",
     "\n",
-    "    # Load the .ts file using the helper function\n",
-    "    df = ts_file_extraction(ts_file)\n",
+    "# -------------------------------\n",
+    "# Full Gait Simulation\n",
+    "# -------------------------------\n",
+    "def simulate_full_gait(data):\n",
+    "    results = []\n",
+    "    current_time = 0\n",
+    "    left_x, right_x = 0.5, 0.5  # Initial positions\n",
+    "    left_y, right_y = 0.0, 0.0\n",
     "\n",
-    "    # Recalculate time based on the sample index and sampling frequency\n",
-    "    df['Time'] = df.index / sampling_freq\n",
+    "    for _, row in data.iterrows():\n",
+    "        # Extract parameters\n",
+    "        T_double = row['double_support_sec']\n",
+    "        T_stride_L = row['left_stride']\n",
+    "        T_swing_L = row['left_swing']\n",
+    "        T_stance_L = row['left_stance']\n",
+    "        \n",
+    "        T_stride_R = row['right_stride']\n",
+    "        T_swing_R = row['right_swing']\n",
+    "        T_stance_R = row['right_stance']\n",
     "\n",
-    "    # Compute estimated stride lengths (and clip them to realistic values, e.g., between 0.5 and 1.5 m)\n",
-    "    df['Left_Stride_Length'] = np.clip(df['Left_Stride_Time'] * avg_speed, 0.5, 1.5)\n",
-    "    df['Right_Stride_Length'] = np.clip(df['Right_Stride_Time'] * avg_speed, 0.5, 1.5)\n",
+    "        # -------------------------------------------\n",
+    "        # Phase 1: Double Support (Both feet static)\n",
+    "        # -------------------------------------------\n",
+    "        t_vals = np.arange(current_time, current_time + T_double, dt)\n",
+    "        for t in t_vals:\n",
+    "            results.append({\n",
+    "                'time': t,\n",
+    "                'x_left': left_x,\n",
+    "                'x_right': right_x,\n",
+    "                'y_left': 0.0,\n",
+    "                'y_right': 0.0\n",
+    "            })\n",
+    "        current_time += T_double\n",
     "\n",
-    "    # Compute X-positions (forward movement) using cumulative sums\n",
-    "    df['X_Left'] = np.cumsum(df['Left_Stride_Length'])\n",
-    "    df['X_Right'] = np.cumsum(df['Right_Stride_Length'])\n",
+    "        # -------------------------------------------\n",
+    "        # Phase 2: Left Foot Swing (Right static)\n",
+    "        # -------------------------------------------\n",
+    "        step_length_L = gait_speed * T_stride_L\n",
+    "        swing_speed_L = step_length_L / T_swing_L\n",
+    "        \n",
+    "        t_swing = np.arange(0, T_swing_L, dt)\n",
+    "        for t in t_swing:\n",
+    "            x = left_x + swing_speed_L * t\n",
+    "            y = parabolic_height(t, T_swing_L, H_peak)\n",
+    "            results.append({\n",
+    "                'time': current_time + t,\n",
+    "                'x_left': x,\n",
+    "                'x_right': right_x,\n",
+    "                'y_left': y,\n",
+    "                'y_right': 0.0\n",
+    "            })\n",
+    "        left_x += step_length_L\n",
+    "        current_time += T_swing_L\n",
     "\n",
-    "    # Compute Y-positions (alternating binary pattern: 0 for ground, step_lift for air)\n",
-    "    df['Y_Left'] = np.where(df.index % 2 == 0, 0, step_lift)\n",
-    "    df['Y_Right'] = np.where(df.index % 2 == 0, step_lift, 0)\n",
+    "        # -------------------------------------------\n",
+    "        # Phase 3: Left Stance (Right static)\n",
+    "        # -------------------------------------------\n",
+    "        t_vals = np.arange(current_time, current_time + T_stance_L - T_double, dt)\n",
+    "        for t in t_vals:\n",
+    "            results.append({\n",
+    "                'time': t,\n",
+    "                'x_left': left_x,\n",
+    "                'x_right': right_x,\n",
+    "                'y_left': 0.0,\n",
+    "                'y_right': 0.0\n",
+    "            })\n",
+    "        current_time += (T_stance_L - T_double)\n",
     "\n",
-    "    # Interpolate X positions to a common time vector\n",
-    "    original_time = df['Time']\n",
-    "    common_time = np.linspace(original_time.min(), original_time.max(), num=num_interpolated_points)\n",
-    "    \n",
-    "    interp_x_right = interp1d(original_time, df['X_Right'], kind='linear', fill_value=\"extrapolate\")\n",
-    "    interp_x_left = interp1d(original_time, df['X_Left'], kind='linear', fill_value=\"extrapolate\")\n",
-    "    \n",
-    "    new_X_right = interp_x_right(common_time)\n",
-    "    new_X_left = interp_x_left(common_time)\n",
-    "    \n",
-    "    # For Y positions, we generate a binary alternating pattern over the new time points,\n",
-    "    # rather than interpolating them (to preserve the stance/swing phase representation)\n",
-    "    new_Y_right = np.where(np.arange(num_interpolated_points) % 2 == 0, step_lift, 0)\n",
-    "    new_Y_left = np.where(np.arange(num_interpolated_points) % 2 == 0, 0, step_lift)\n",
-    "    \n",
-    "    # Create the final interpolated DataFrame\n",
-    "    interpolated_df = pd.DataFrame({\n",
-    "        'Time': common_time,\n",
-    "        'X_Right': new_X_right,\n",
-    "        'Y_Right': new_Y_right,\n",
-    "        'X_Left': new_X_left,\n",
-    "        'Y_Left': new_Y_left\n",
-    "    })\n",
+    "        # -------------------------------------------\n",
+    "        # Phase 4: Double Support\n",
+    "        # -------------------------------------------\n",
+    "        t_vals = np.arange(current_time, current_time + T_double, dt)\n",
+    "        for t in t_vals:\n",
+    "            results.append({\n",
+    "                'time': t,\n",
+    "                'x_left': left_x,\n",
+    "                'x_right': right_x,\n",
+    "                'y_left': 0.0,\n",
+    "                'y_right': 0.0\n",
+    "            })\n",
+    "        current_time += T_double\n",
     "\n",
-    "    return interpolated_df\n",
+    "        # -------------------------------------------\n",
+    "        # Phase 5: Right Foot Swing (Left static)\n",
+    "        # -------------------------------------------\n",
+    "        step_length_R = gait_speed * T_stride_R\n",
+    "        swing_speed_R = step_length_R / T_swing_R\n",
+    "        \n",
+    "        t_swing = np.arange(0, T_swing_R, dt)\n",
+    "        for t in t_swing:\n",
+    "            x = right_x + swing_speed_R * t\n",
+    "            y = parabolic_height(t, T_swing_R, H_peak)\n",
+    "            results.append({\n",
+    "                'time': current_time + t,\n",
+    "                'x_left': left_x,\n",
+    "                'x_right': x,\n",
+    "                'y_left': 0.0,\n",
+    "                'y_right': y\n",
+    "            })\n",
+    "        right_x += step_length_R\n",
+    "        current_time += T_swing_R\n",
     "\n",
-    "# Example usage\n",
-    "exp_als_1_gait = compute_gait_positions('als1.hea', 'als1.ts')\n",
-    "print(exp_als_1_gait.head())\n",
+    "        # -------------------------------------------\n",
+    "        # Phase 6: Right Stance (Left static)\n",
+    "        # -------------------------------------------\n",
+    "        t_vals = np.arange(current_time, current_time + T_stance_R - T_double, dt)\n",
+    "        for t in t_vals:\n",
+    "            results.append({\n",
+    "                'time': t,\n",
+    "                'x_left': left_x,\n",
+    "                'x_right': right_x,\n",
+    "                'y_left': 0.0,\n",
+    "                'y_right': 0.0\n",
+    "            })\n",
+    "        current_time += (T_stance_R - T_double)\n",
     "\n",
-    "    \n"
+    "    return pd.DataFrame(results)\n",
+    "\n",
+    "# -------------------------------\n",
+    "# Run Simulation\n",
+    "# -------------------------------\n",
+    "df = simulate_full_gait(data)\n",
+    "save_to_json(df, 'gait_coordinates/park1_coord.json')\n"
    ]
   },
   {
