Imported more json files for Top-Down view viz, added more options

--- a/python_part.ipynb
+++ b/python_part.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -3431,20 +3431,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "194\n",
-      "310\n",
-      "259\n",
-      "245\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#### Get left and right strides for each group\n",
     "import os\n",
@@ -3496,19 +3485,43 @@
     "# Dataframes of our variables\n",
     "file_als = 'gait_data/als1.ts'\n",
     "df_strides_als = extract_strides(file_als)\n",
-    "print(len(df_double_support_als))\n",
     "\n",
     "file_hunt = 'gait_data/hunt1.ts'\n",
     "df_strides_hunt = extract_strides(file_hunt)\n",
-    "print(len(df_double_support_hunt))\n",
     "\n",
     "file_control = 'gait_data/control1.ts'\n",
     "df_strides_control = extract_strides(file_control)\n",
-    "print(len(df_double_support_control))\n",
     "\n",
     "file_park = 'gait_data/park1.ts'\n",
     "df_strides_park = extract_strides(file_park)\n",
-    "print(len(df_double_support_park))"
+    "\n",
+    "## new files\n",
+    "file_als3 = 'gait_data/als3.ts'\n",
+    "df_strides_als3 = extract_strides(file_als3)\n",
+    "\n",
+    "file_hunt9 = 'gait_data/hunt9.ts'\n",
+    "df_strides_hunt9 = extract_strides(file_hunt9)\n",
+    "\n",
+    "file_hunt19 = 'gait_data/hunt19.ts'\n",
+    "df_strides_hunt19 = extract_strides(file_hunt19)\n",
+    "\n",
+    "file_control14 = 'gait_data/control14.ts'\n",
+    "df_strides_control14 = extract_strides(file_control14)\n",
+    "\n",
+    "file_park2 = 'gait_data/park2.ts'\n",
+    "df_strides_park2 = extract_strides(file_park2)\n",
+    "\n",
+    "file_als9 = 'gait_data/als9.ts'\n",
+    "df_strides_als9 = extract_strides(file_als9)\n",
+    "\n",
+    "file_control9 = 'gait_data/control9.ts'\n",
+    "df_strides_control9 = extract_strides(file_control9)\n",
+    "\n",
+    "file_park11 = 'gait_data/park11.ts'\n",
+    "df_strides_park11 = extract_strides(file_park11)\n",
+    "\n",
+    "file_control12 = 'gait_data/control12.ts'\n",
+    "df_strides_control12 = extract_strides(file_control12)"
    ]
   },
   {
@@ -3644,7 +3657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -3654,7 +3667,13 @@
       "File als1.json created successfully.\n",
       "File hunt1.json created successfully.\n",
       "File control1.json created successfully.\n",
-      "File park1.json created successfully.\n"
+      "File park1.json created successfully.\n",
+      "File park2.json created successfully.\n",
+      "File park11.json created successfully.\n",
+      "File als3.json created successfully.\n",
+      "File als9.json created successfully.\n",
+      "File hunt9.json created successfully.\n",
+      "File hunt19.json created successfully.\n"
      ]
     }
    ],
@@ -3672,7 +3691,13 @@
     "save_to_json(df_strides_als, \"als1.json\")\n",
     "save_to_json(df_strides_hunt, \"hunt1.json\")\n",
     "save_to_json(df_strides_control, \"control1.json\")\n",
-    "save_to_json(df_strides_park, \"park1.json\")"
+    "save_to_json(df_strides_park, \"park1.json\")\n",
+    "save_to_json(df_strides_park2, \"park2.json\")\n",
+    "save_to_json(df_strides_park11, \"park11.json\")\n",
+    "save_to_json(df_strides_als3, \"als3.json\")\n",
+    "save_to_json(df_strides_als9, \"als9.json\")\n",
+    "save_to_json(df_strides_hunt9, \"hunt9.json\")\n",
+    "save_to_json(df_strides_hunt19, \"hunt19.json\")"
    ]
   },
   {
@@ -4050,7 +4075,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -4064,9 +4089,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
